test/types/records/ferguson/choose-record/choose-record10.good
choose-record10.chpl:20: error: Cannot set a non-const reference to a const variable.
choose-record10.chpl:23: error: Cannot set a non-const reference to a const variable.
